--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,21 +2,16 @@ name: Docker
 on:
   workflow_dispatch:
   push:
+    branches:
+      - main  # 你可以根据实际默认分支修改，比如原来是 master 就改为 master
     tags: [ 'v*.*.*' ]
 env:
-  # 注册中心配置
   DOCKERHUB_REGISTRY: docker.io
-  GHCR_REGISTRY: ghcr.io
-  # 镜像名称配置
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}  # 替换为您的真实Docker Hub用户名
-  REPO_NAME: wangyimusicapi  # 仓库名保持不变
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  REPO_NAME: wangyimusicapi
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,31 +19,22 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
-      # 双平台登录（关键修改）
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKERHUB_REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}  # 必须使用Secret存储
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.GHCR_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.MY_GITHUB_TOKEN }}
-      # 元数据生成（适配双平台）
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
             ${{ env.DOCKERHUB_REGISTRY }}/${{ env.DOCKERHUB_USERNAME }}/${{ env.REPO_NAME }}
-            ${{ env.GHCR_REGISTRY }}/${{ github.repository_owner }}/${{ env.REPO_NAME }}
           tags: |
-            type=ref,event=branch,branch=main,name=latest
-            type=semver,pattern={{version}}
-      # 构建推送（多平台支持）
+            type=sha,prefix=commit-  # 基于提交哈希生成标签，前缀为 commit-
+            type=ref,event=branch,branch=main,name=latest  # 为 main 分支打上 latest 标签
+            type=semver,pattern={{version}},enabled=false  # 暂时禁用语义化版本标签生成（如果不需要的话）
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -57,7 +43,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      # Docker Hub描述更新（修正）
       - name: Update Docker Hub description
         if: github.event_name != 'pull_request'
         uses: peter-evans/dockerhub-description@v4
