--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,30 +1,37 @@
 name: Docker
+
 on:
   workflow_dispatch:
   push:
     branches:
       - main  # 你可以根据实际默认分支修改，比如原来是 master 就改为 master
-    tags: ['v*.*.*']
+    tags: ['v*.*.*']  # 监听以 v 开头的语义化版本标签
+
 env:
   DOCKERHUB_REGISTRY: docker.io
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   REPO_NAME: wangyimusicapi
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           registry: ${{ env.DOCKERHUB_REGISTRY }}
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -32,9 +39,10 @@ jobs:
           images: |
             ${{ env.DOCKERHUB_REGISTRY }}/${{ env.DOCKERHUB_USERNAME }}/${{ env.REPO_NAME }}
           tags: |
-            type=sha,prefix=commit-  # 基于提交哈希生成标签，前缀为 commit-
             type=ref,event=branch,branch=main,name=latest  # 为 main 分支打上 latest 标签
-            type=semver,pattern={{version}},enable=true  # 启用语义化版本标签生成
+            type=semver,pattern={{version}},enable=true    # 启用语义化版本标签生成
+            type=sha,prefix=commit-                       # 基于提交哈希生成标签，前缀为 commit-
+
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
@@ -43,6 +51,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
       - name: Update Docker Hub description
         if: github.event_name != 'pull_request'
         uses: peter-evans/dockerhub-description@v4
